Use in view.html template $:B_glyphjson for Font B

--- a/templates/view.html
+++ b/templates/view.html
@@ -108,7 +108,7 @@ function setText(point) {
       text.content = point.x.toFixed(2) + ',' + point.y.toFixed(2);
   }
 
-  var EDGE_JSON = $:A_glyphjson;
+  var EDGE_JSON = $:B_glyphjson;
 
   function getPoint(x, y) {
     width = EDGE_JSON.width;
