--- a/templates/settings.html
+++ b/templates/settings.html
@@ -37,6 +37,7 @@ Project $master.FontName
                             selected="selected"
                         >Local parameters $local.idlocal</option>
             </select>
+            <input type="submit" >
         </form>
 
         $if localA:
@@ -76,6 +77,7 @@ Project $master.FontName
                             selected="selected"
                         >Local parameters $local.idlocal</option>
             </select>
+            <input type="submit" >
         </form>
 
         $if localB:
