form separated to several classes to avoid Bad Request

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -22,12 +22,12 @@ Project $master.FontName
         <h4>Font A</h4>
         <h4>Local</h4>
 
-        <form action="/view/$master.FontName/$glyphid/settings/rest/" method="post">
+        <form action="/view/$master.FontName/$glyphid/settings/rest/create/" method="post">
             <input type="submit" class="btn btn-large" value="Create Local Parameters">
             <input type="hidden" name="create" value="a">
         </form>
 
-        <form action="/view/$master.FontName/$glyphid/settings/rest/" method="post">
+        <form action="/view/$master.FontName/$glyphid/settings/rest/update/" method="post">
             <input type="hidden" name="update" value="a">
             <select class="parameter-select" name="idlocal" id="">
                 <option value="">Choose Parameter Set</option>
@@ -48,12 +48,12 @@ Project $master.FontName
     <div class="col-md-4">
         <h4>Global</h4>
 
-        <form action="/view/$master.FontName/$glyphid/settings/rest/" method="post">
+        <form action="/view/$master.FontName/$glyphid/settings/rest/create/" method="post">
             <input type="submit" class="btn btn-large" value="Create Global Parameters">
             <input type="hidden" name="create" value="g">
         </form>
 
-        <form action="/view/$master.FontName/$glyphid/settings/rest/" method="post">
+        <form action="/view/$master.FontName/$glyphid/settings/rest/update/" method="post">
             <input type="hidden" name="update" value="g">
             <select class="parameter-select" name="idglobal" id="">
                 <option value="">Choose Parameter Set</option>
@@ -76,12 +76,12 @@ Project $master.FontName
         <h4>Font B</h4>
         <h4>Local</h4>
 
-        <form action="/view/$master.FontName/$glyphid/settings/rest/" method="post">
+        <form action="/view/$master.FontName/$glyphid/settings/rest/create/" method="post">
             <input type="submit" class="btn btn-large" value="Create Local Parameters">
             <input type="hidden" name="create" value="b">
         </form>
 
-        <form action="/view/$master.FontName/$glyphid/settings/rest/" method="post">
+        <form action="/view/$master.FontName/$glyphid/settings/rest/update/" method="post">
             <input type="hidden" name="update" value="b">
             <select class="parameter-select" name="idlocal" id="">
                 <option value="">Choose Parameter Set</option>
