--- a/templates/view.html
+++ b/templates/view.html
@@ -64,8 +64,9 @@ Project $master.FontName
     nx = w * x / width;
     ny = h * y / height;
 
-    console.log({'nx': nx, 'ny': ny})
-    return new Point(nx, ny);
+    var point = new Point(nx, ny);
+    point.data = {'name': 'p' + x}
+    return point
   }
 
   var edges = EDGE_JSON.edges;
@@ -111,7 +112,7 @@ Project $master.FontName
 
   var EDGE_JSON = $:A_glyphjson;
 
-  function getPoint(x, y) {
+  function getPoint(x, y, i) {
     width = EDGE_JSON.width;
     height = EDGE_JSON.height;
 
@@ -126,11 +127,13 @@ Project $master.FontName
     nx = w * x / width;
     ny = h * y / height;
 
-    console.log({'nx': nx, 'ny': ny})
-    return new Point(nx, ny);
+    var point = new Point(nx, ny);
+    point.data = {'name': 'p' + i}
+    return point
   }
 
   var edges = EDGE_JSON.edges;
+  var pointcounter = 1;
   for (var i = 0; i < edges.length; i++) {
       for (var j = 0; j < edges[i].contours.length; j++) {
           var path = new Path();
@@ -147,6 +150,7 @@ Project $master.FontName
               segment = new Segment(point, handleIn, handleOut);
               // setText(point);
               path.add(segment);
+              pointcounter++;
           }
           path.closed = true;
           path.selected = true;
@@ -159,6 +163,68 @@ Project $master.FontName
               brightness: 1,
               alpha: 0.5
           };
+      }
+  }
+
+  var path;
+  var types = ['point', 'handleIn', 'handleOut'];
+  function findHandle(point) {
+      for (var i = 0, l = path.segments.length; i < l; i++) {
+          for (var j = 0; j < 3; j++) {
+              var type = types[j];
+              var segment = path.segments[i];
+              var segmentPoint = type == 'point'
+                      ? segment.point
+                      : segment.point + segment[type];
+              var distance = (point - segmentPoint).length;
+              if (distance < 3) {
+                  return {
+                      type: type,
+                      segment: segment
+                  };
+              }
+          }
+      }
+      return null;
+  }
+
+  var currentSegment, mode, type;
+  function onMouseDown(event) {
+      if (currentSegment)
+          currentSegment.selected = false;
+      mode = type = currentSegment = null;
+
+  
+      var result = findHandle(event.point);
+      if (result) {
+          currentSegment = result.segment;
+          type = result.type;
+          if (path.segments.length > 1 && result.type == 'point'
+                  && result.segment.index == 0) {
+              mode = 'close';
+              path.closed = true;
+              path.selected = true;
+//                path = null;
+          }
+      }
+
+      if (mode != 'close') {
+          mode = currentSegment ? 'move' : 'add';
+          if (!currentSegment)
+              currentSegment = path.add(event.point);
+          currentSegment.selected = true;
+      }
+  }
+
+  function onMouseDrag(event) {
+      if (mode == 'move' && type == 'point') {
+          currentSegment.point = event.point;
+      } else if (mode != 'close') {
+          var delta = event.delta.clone();
+          if (type == 'handleOut' || mode == 'add')
+              delta = -delta;
+          currentSegment.handleIn += delta;
+          currentSegment.handleOut -= delta;
       }
   }
 </script>
