--- a/templates/view.html
+++ b/templates/view.html
@@ -187,6 +187,9 @@ Project $master.FontName
                   currentSegment.selected = true;
               }
           }
+          path.onMouseUp = function(event) {
+            mode = type = currentSegment = null;
+          }
       }
   }
 
