--- a/templates/view.html
+++ b/templates/view.html
@@ -163,71 +163,85 @@ Project $master.FontName
               brightness: 1,
               alpha: 0.5
           };
-          path.onMouseDown = function(event) {
+          var circle = new Path.Circle({
+              center: new Point(306.0, 714- 419.0),
+              radius: 10,
+              fillColor: 'red', 
+
+          });
+
+          var box = new Path.Rectangle(new Point(50, 50), new Size(50, 50));
+              box.style = {
+                  strokeColor: 'red',
+                  strokeWidth: '5'
+              };
+
+          function onFrame(event) {
+    // Each frame, rotate the copy by 1 degree:
+              box.rotate(1);
+          }
+             
+          var path;
+          var types = ['point', 'handleIn', 'handleOut'];
+          function findHandle(point) {
+              for (var i = 0, l = path.segments.length; i < l; i++) {
+                  for (var j = 0; j < 30; j++) {
+                      var type = types[j];
+                      var segment = path.segments[i];
+                      var segmentPoint = type == 'point'
+                            ? segment.point
+                            : segment.point + segment[type];
+                      var distance = (point - segmentPoint).length;
+                      if (distance < 10) {
+                          return {
+                              type: type,
+                              segment: segment
+                          };
+                      }
+                  }
+              }
+              return null;
+          }
+
+          var currentSegment, mode, type;
+          function onMouseDown(event) {
               if (currentSegment)
                   currentSegment.selected = false;
               mode = type = currentSegment = null;
-
-              var result = findHandle(this, event.point);
-              if (result) {
-                  currentSegment = result.segment;
-                  type = result.type;
-                  if (this.segments.length > 1 && result.type == 'point'
-                          && result.segment.index == 0) {
-                      mode = 'close';
-                      this.closed = true;
-                      this.selected = true;
+                       
+              var result = findHandle(event.point);
+                  if (result) {
+                      currentSegment = result.segment;
+                      type = result.type;
+                      if (path.segments.length > 1 && result.type == 'point'
+                               && result.segment.index == 0) {
+                          mode = 'close';
+                          path.closed = true;
+                          path.selected = true; 
+                      }             
                   }
-              }
-
-              if (mode != 'close') {
-                  mode = currentSegment ? 'move' : 'add';
-                  if (!currentSegment)
-                      currentSegment = this.add(event.point);
-                  currentSegment.selected = true;
-              }
+            
+                  if (mode != 'close') {
+                      mode = currentSegment ? 'move' : 'add';
+                      if (!currentSegment)
+                          currentSegment.point = event.point;
+                          box.position = event.point;                               
+                  }
           }
-          path.onMouseUp = function(event) {
-            mode = type = currentSegment = null;
-          }
-      }
-  }
 
-  var types = ['point', 'handleIn', 'handleOut'];
-  function findHandle(path, point) {
-      for (var i = 0, l = path.segments.length; i < l; i++) {
-          for (var j = 0; j < 3; j++) {
-              var type = types[j];
-              var segment = path.segments[i];
-              var segmentPoint = type == 'point'
-                      ? segment.point
-                      : segment.point + segment[type];
-              var distance = (point - segmentPoint).length;
-              if (distance < 3) {
-                  return {
-                      type: type,
-                      segment: segment
-                  };
+          function onMouseDrag(event) {
+              if (mode == 'move' && type == 'point') {
+                  currentSegment.point = event.point;
+                  box.position = event.point;
+              } else if (mode != 'close') {
+                  var delta = event.delta.clone();
+                  if (type == 'handleOut' || mode == 'add')
+                      delta = -delta;
+                  currentSegment.handleIn += delta;
+                  currentSegment.handleOut -= delta;
               }
           }
-      }
-      return null;
-  }
 
-  function onMouseDrag(event) {
-      if (!currentSegment) {
-        return;
-      }
-      if (mode == 'move' && type == 'point') {
-          currentSegment.point = event.point;
-      } else if (mode != 'close') {
-          var delta = event.delta.clone();
-          if (type == 'handleOut' || mode == 'add')
-              delta = -delta;
-          currentSegment.handleIn += delta;
-          currentSegment.handleOut -= delta;
-      }
-  }
 </script>
 
 
