--- a/templates/view.html
+++ b/templates/view.html
@@ -182,7 +182,8 @@ Project $master.FontName
           }
              
           var path;
-          var types = ['point', 'handleIn', 'handleOut'];
+// controlls on          var types = ['point', 'handleIn', 'handleOut'];
+          var types = ['point'];
           function findHandle(point) {
               for (var i = 0, l = path.segments.length; i < l; i++) {
                   for (var j = 0; j < 30; j++) {
