--- a/templates/view.html
+++ b/templates/view.html
@@ -98,6 +98,95 @@ Project $master.FontName
               brightness: 1,
               alpha: 0.5
           };
+
+              var circle = new Path.Circle({
+          center: new Point(306.0, 714- 419.0),
+          radius: 10,
+          fillColor: 'red', 
+
+          });
+
+
+              var box = new Path.Rectangle(new Point(50, 50), new Size(50, 50));
+              box.style = {
+    //    fillColor: 'none',
+              strokeColor: 'red',
+              strokeWidth: '5'
+          };
+
+              function onFrame(event) {
+    // Each frame, rotate the copy by 1 degree:
+          box.rotate(1);
+          } 
+
+    //    circle.scale(2);
+   
+            
+              var path;
+          var types = ['point', 'handleIn', 'handleOut'];
+          function findHandle(point) {
+              for (var i = 0, l = path.segments.length; i < l; i++) {
+                  for (var j = 0; j < 30; j++) {
+                      var type = types[j];
+                      var segment = path.segments[i];
+                      var segmentPoint = type == 'point'
+                            ? segment.point
+                            : segment.point + segment[type];
+                      var distance = (point - segmentPoint).length;
+                      if (distance < 10) {
+                          return {
+                              type: type,
+                              segment: segment
+                          };
+                      } 
+                  }
+              }
+          return null;
+          }
+
+          var currentSegment, mode, type;
+          function onMouseDown(event) {
+              if (currentSegment)
+                  currentSegment.selected = false;
+              mode = type = currentSegment = null;
+                
+
+        
+          var result = findHandle(event.point);
+              if (result) {
+                  currentSegment = result.segment;
+                  type = result.type;
+                  if (path.segments.length > 1 && result.type == 'point'
+                        && result.segment.index == 0) {
+                      mode = 'close';
+                      path.closed = true;
+                      path.selected = true;
+    //                path = null;
+                    
+                  }             
+              }
+
+            
+            
+            if (mode != 'close') {
+                mode = currentSegment ? 'move' : 'add';
+                if (!currentSegment)
+                currentSegment.point = event.point;
+                box.position = event.point;               
+                
+            }
+        }
+
+        function onMouseDrag(event) {
+            if (mode == 'move' && type == 'point') {
+                currentSegment.point = event.point;
+                box.position = event.point;
+            } else if (mode != 'close') {
+                var delta = event.delta.clone();
+                if (type == 'handleOut' || mode == 'add')
+                    delta = -delta;
+                currentSegment.handleIn += delta;
+                currentSegment.handleOut -= delta;
       }
   }
 </script>
