--- a/templates/view.html
+++ b/templates/view.html
@@ -69,6 +69,8 @@ Project $master.FontName
     return point
   }
 
+  var types = ['point', 'handleIn', 'handleOut'];
+
   var edges = EDGE_JSON.edges;
   for (var i = 0; i < edges.length; i++) {
       for (var j = 0; j < edges[i].contours.length; j++) {
@@ -112,7 +114,7 @@ Project $master.FontName
                   currentSegment.selected = false;
               mode = type = currentSegment = null;
 
-              var result = findHandle(event.point);
+              var result = findHandle(path, event.point);
               
               if (result) {
                   currentSegment = result.segment;
@@ -127,14 +129,18 @@ Project $master.FontName
 
               if (mode != 'close') {
                   mode = currentSegment ? 'move' : 'add';
-                  if (!currentSegment)
-                  currentSegment.point = event.point;
+                  if (currentSegment) {
+                    currentSegment.point = event.point;
+                  }
                   box.position = event.point;               
                   
               }
           }
 
           function onMouseDrag(event) {
+              if (!currentSegment) {
+                return;
+              }
               if (mode == 'move' && type == 'point') {
                   currentSegment.point = event.point;
                   box.position = event.point;
@@ -160,8 +166,6 @@ Project $master.FontName
       } 
   }
 
-
-  var types = ['point', 'handleIn', 'handleOut'];
   function findHandle(path, point) {
     for (var i = 0, l = path.segments.length; i < l; i++) {
         for (var j = 0; j < 30; j++) {
@@ -210,16 +214,18 @@ Project $master.FontName
 
     return new Point(nx, ny);
   }
-  var currentSegment, mode, type;
+  
+  var types = ['point', 'handleIn', 'handleOut'];
+
   var edges = EDGE_JSON.edges;
-  var pointcounter = 1;
-  for (var i = 0; i < edges.length; i++) {   
+  for (var i = 0; i < edges.length; i++) {
       for (var j = 0; j < edges[i].contours.length; j++) {
           var path = new Path();
           var contours = edges[i].contours[j];
           for (var k = 0; k < contours.length; k++) { // contours.length
               contour = contours[k];
               console.log(contour);
+
               var point = getPoint(Number(contour.x), 500 - Number(contour.y));
               var handleIn = getPoint(Number(contour.controls[0].x) - Number(contour.x),
                                        Number(contour.y) - Number(contour.controls[0].y));
@@ -228,7 +234,6 @@ Project $master.FontName
               segment = new Segment(point, handleIn, handleOut);
               // setText(point);
               path.add(segment);
-              pointcounter++;
           }
           path.closed = true;
           path.selected = true;
@@ -241,65 +246,47 @@ Project $master.FontName
               brightness: 1,
               alpha: 0.5
           };
+
           var circle = new Path.Circle({
-              center: new Point(306.0, 714- 419.0),
-              radius: 10,
-              fillColor: 'red', 
+            center: new Point(306.0, 714- 419.0),
+            radius: 10,
+            fillColor: 'red', 
+
           });
-          var box = new Path.Rectangle(new Point(50, 50), new Size(50, 50));
-              box.style = {
-                  strokeColor: 'red',
-                  strokeWidth: '5'
-              };
-          function onFrame(event) {
-              box.rotate(1);
-          }             
-          var path;
-          var types = ['point'];
-          function findHandle(point) {
-              for (var i = 0, l = path.segments.length; i < l; i++) {
-                  for (var j = 0; j < 30; j++) {
-                      var type = types[j];
-                      var segment = path.segments[i];
-                      var segmentPoint = type == 'point'
-                            ? segment.point
-                            : segment.point + segment[type];
-                      var distance = (point - segmentPoint).length;
-                      if (distance < 10) {
-                          return {
-                              type: type,
-                              segment: segment
-                          };
-                      }
-                  }
-              }
-              return null;
-          }
+
           var currentSegment, mode, type;
-          function onMouseDown(event) {
+          path.onMouseDown = function(event) {
               if (currentSegment)
                   currentSegment.selected = false;
               mode = type = currentSegment = null;
-                       
-              var result = findHandle(event.point);
-                  if (result) {
-                      currentSegment = result.segment;
-                      type = result.type;
-                      if (path.segments.length > 1 && result.type == 'point'
-                               && result.segment.index == 1) {
-                          mode = 'close';
-                          path.closed = true;
-                          path.selected = true; 
-                      }             
+
+              var result = findHandle(path, event.point);
+              
+              if (result) {
+                  currentSegment = result.segment;
+                  type = result.type;
+                  if (path.segments.length > 1 && result.type == 'point'
+                        && result.segment.index == 0) {
+                      mode = 'close';
+                      path.closed = true;
+                      path.selected = true;
                   }
-                  if (mode != 'close') {
-                      mode = currentSegment ? 'move' : 'add';
-                      if (!currentSegment)
-                          currentSegment.point = event.point;
-                          box.position = event.point;                               
+              }
+
+              if (mode != 'close') {
+                  mode = currentSegment ? 'move' : 'add';
+                  if (currentSegment) {
+                    currentSegment.point = event.point;
                   }
+                  box.position = event.point;               
+                  
+              }
           }
+
           function onMouseDrag(event) {
+              if (!currentSegment) {
+                return;
+              }
               if (mode == 'move' && type == 'point') {
                   currentSegment.point = event.point;
                   box.position = event.point;
@@ -309,12 +296,41 @@ Project $master.FontName
                       delta = -delta;
                   currentSegment.handleIn += delta;
                   currentSegment.handleOut -= delta;
-              }
-          } 
-      }  
-  }         
+                }
+          }
+      }
 
+      var box = new Path.Rectangle(new Point(50, 50), new Size(50, 50));
+      box.style = {
+          strokeColor: 'red',
+          strokeWidth: '5'
+      };
 
+      function onFrame(event) {
+        // Each frame, rotate the copy by 1 degree:
+        box.rotate(1);
+      } 
+  }
+
+  function findHandle(path, point) {
+    for (var i = 0, l = path.segments.length; i < l; i++) {
+        for (var j = 0; j < 30; j++) {
+            var type = types[j];
+            var segment = path.segments[i];
+            var segmentPoint = type == 'point'
+                  ? segment.point
+                  : segment.point + segment[type];
+            var distance = (point - segmentPoint).length;
+            if (distance < 10) {
+                return {
+                    type: type,
+                    segment: segment
+                };
+            } 
+        }
+    }
+    return null;
+  }
 </script>
 
 
