--- a/templates/view.html
+++ b/templates/view.html
@@ -1,4 +1,4 @@
-$def with (master, glyphid, A_glyphjson, B_glyphjson, M_glyphjson, localparametersA, localparametersB)
+$def with (master, glyphid, A_glyphjson, B_glyphjson, M_glyphjson, localparametersA, localparametersB, origins)
 <title>
 Project $master.fontname
 </title>
@@ -230,6 +230,8 @@ Project $master.fontname
 
   var EDGE_JSON = $:A_glyphjson;
 
+  var JSON = $:origins['a'];
+
   function getPoint(x, y, i) {
     width = EDGE_JSON.width;
     height = EDGE_JSON.height;
@@ -287,6 +289,23 @@ Project $master.fontname
           };
           pathes.push(path);
       }
+  }
+
+  for (var i = 0; i < JSON.points.length; i++) {
+    segment = new Segment(getPoint(Number(JSON.points[i].x), 500 - Number(JSON.points[i].y), 0));
+    path = new Path();
+    path.add(segment);
+    path.closed = true;
+    path.selected = true;
+    path.fullySelected = true;
+    path.strokeColor = 'black';
+    path.position.y += +200;
+    path.fillColor = {
+        hue: 360 * Math.random(),
+        saturation: 1,
+        brightness: 1,
+        alpha: 0.5
+    };
   }
 
   var circle = new Path.Circle({
