--- a/templates/view.html
+++ b/templates/view.html
@@ -277,9 +277,6 @@ Project $master.fontname
               path.add(segment);
           }
           path.closed = true;
-          path.selected = true;
-          path.fullySelected = true;
-          path.strokeColor = 'black';
           path.position.y += +200;
           path.fillColor = {
               hue: 360 * Math.random(),
@@ -298,14 +295,8 @@ Project $master.fontname
     path.closed = true;
     path.selected = true;
     path.fullySelected = true;
-    path.strokeColor = 'black';
+    path.strokeColor = new Color(0.5, 0, 0.5);
     path.position.y += +200;
-    path.fillColor = {
-        hue: 360 * Math.random(),
-        saturation: 1,
-        brightness: 1,
-        alpha: 0.5
-    };
   }
 
   var circle = new Path.Circle({
